--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body class="container-lg">
     <nav class="navbar navbar-expand-lg mt-2 bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">FinBuddy</a>
+        <a class="navbar-brand" href="#"><b>F</b>in<b>B</b>uddy</a>
         <button
           class="navbar-toggler"
           type="button"
